# rustlings

exercises/: quiz1.rs  quiz2.rs  quiz3.rs
exercises/error_handling/: errors2.rs  errors3.rs  errors6.rs
exercises/functions/: functions2.rs
exercises/hashmaps/: hashmaps3.rs
exercises/iterators/: iterators2.rs  iterators3.rs  iterators5.rs
exercises/move_semantics/: move_semantics5.rs  move_semantics6.rs
exercises/options/: options2.rs
exercises/primitive_types/: primitive_types2.rs
exercises/strings/: strings3.rs
exercises/structs/: structs2.rs
exercises/vecs/: vecs1.rs
playgrounds/concurrency_drill/: Cargo.toml  increments.txt
playgrounds/concurrency_drill/src/: main.rs
playgrounds/drill1/: Cargo.toml
playgrounds/drill1/src/: main.rs
playgrounds/drill2/: Cargo.toml
playgrounds/drill2/src/: main.rs
playgrounds/drill3/: Cargo.toml
playgrounds/drill3/src/: lib.rs
playgrounds/error-handling/src/: main.rs
playgrounds/exe1/src/: main.rs
playgrounds/exe2/src/: main.rs
playgrounds/exe3/src/: main.rs
playgrounds/exe4/: Cargo.toml
playgrounds/exe4/src/: m1_enums.rs  m2_structs.rs  m3_traits.rs  m4_polymorphism.rs  m5_lifetime.rs  m6_patterns.rs  (+3 more)
playgrounds/macro_test/: Cargo.toml
playgrounds/my_proc_macro/: Cargo.toml
playgrounds/panicking-responsibility/: Cargo.toml
playgrounds/rust_course/: Cargo.toml
playgrounds/sandbox/: executable.rs  library.rlib
playgrounds/sandbox/foo/: Cargo.toml
playgrounds/sandbox/foo/src/: main.rs
playgrounds/smart_pt_drill/: Cargo.toml
playgrounds/web_template/: .gitignore  Cargo.toml
(+23 files in other folders)
